Some boilerplate structural placeholders.
Modes for a title screen, an "ingame" mode, and a credits scroll.  Was
a little awkward not having a credit scroll for the last GiaW because I
had no time to add it right at the end.  This time, I'm putting it in
early!

Adds some simple free fonts.

Still no real game content.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,8 +52,12 @@ include_directories(
 
 
 set(SOURCES
-	main.cpp
+	Games/Ten/Modes/TEN_ModeCredits.cpp
+	Games/Ten/Modes/TEN_ModeInGame.cpp
+	Games/Ten/Modes/TEN_ModeTitle.cpp
+	Games/Ten/TEN_Fader.cpp
 	Games/Ten/TEN_Game.cpp
+	main.cpp
 	)
 
 add_executable(
